--- a/templates/layouts/main.html
+++ b/templates/layouts/main.html
@@ -48,7 +48,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/home">🌐</a>
+          <a class="navbar-brand" href="/">🌐</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -108,7 +108,7 @@
 
   <div id="footer">
     <div class="container">
-      <p>Connect 🌐</p>
+      <a href="/logout">Login/Logout 🌐</a>
       {% block footer %}{% endblock %}
     </div>
   </div>
